--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "cardapio-online",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.0",
-    "openmobile": "^1.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
@@ -18,17 +21,18 @@
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
     "scss": "^0.2.4",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "mobile": "node ./node_modules/openmobile/ip.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "typescript": "^4.9.5"
   }
 }
